// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleFormEditor /> should render editor for creating rule 1`] = `
<div>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Add rule
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer"
  >
    <div
      class="container"
    >
      <div>
        <button
          type="button"
        >
          Trigger submit
        </button>
        <button
          type="button"
        >
          Trigger submit with missing fields
        </button>
        <button
          type="button"
        >
          Trigger delete
        </button>
      </div>
      <div
        class="cardContainer"
      >
        <div
          class="card"
        >
          <p
            class="cardTitle mb-1"
          >
            Need some inspiration?
          </p>
          <p>
            Start with a pre-made rule template and adapt it to fit your needs.
          </p>
          <a
            href="/app/settings/rules/library"
          >
            <button
              aria-disabled="false"
              class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-primary-a432"
              data-name="button"
              data-rac=""
              data-react-aria-pressable="true"
              id="react-aria-:r0:"
              tabindex="0"
              type="button"
            >
              <div
                class="ui-button-surface-a432"
              >
                <span
                  class="ui-button-content-a432"
                >
                  <span
                    class="typography-bold-md ui-text-text-d239"
                    data-name="text"
                    style="text-align: left; text-wrap: nowrap;"
                  >
                    <strong>
                      Browse Templates
                    </strong>
                  </span>
                </span>
              </div>
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RuleFormEditor /> should render editor for rule 1`] = `
<div>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            href="/app/settings/rules"
          >
            Rules
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          my rule
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <ul
      class="item active nav"
    >
      Rule settings
    </ul>
    <ul
      class="item nav"
    >
      Affected tickets
    </ul>
  </nav>
  <div
    class="pageContainer"
  >
    <div
      class="container"
    >
      <div>
        <button
          type="button"
        >
          Trigger submit
        </button>
        <button
          type="button"
        >
          Trigger submit with missing fields
        </button>
        <button
          type="button"
        >
          Trigger delete
        </button>
      </div>
    </div>
  </div>
</div>
`;
